# TomatoMeter-AI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: app.py  predicitions_batch.py  settings.py  utils.py
data/: sample.csv
notebooks/: Text-Classification.ipynb
